<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_yolo_bt</name>
  <version>0.0.1</version>
  <description>Paquete para control por voz del Kobuki usando YOLO y Behavior Trees para recoger objetos</description>
  <maintainer email="alejandro@email.com">Alejandro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>yolo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>audio_common_msgs</depend>
  <depend>pocketsphinx</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 